--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 
 spring:
   application:
-    name: UserService
+    name: user-service
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/user-service
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
   jpa:
     hibernate:
@@ -15,10 +15,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
-server:
-  port: 8081
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${EUREKA_HOSTNAME}:${EUREKA_PORT}/eureka/
